[package]
name = "the-game-economy-simulation"
version = "0.1.0"
edition = "2021"
description = "Dark Forest game simulator — Rust port of the Python game_sim"

[dependencies]
rand = "0.8"
# no serde, no clap — keeping dependency-free for max compile speed

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
