[package]
name = "the-game-economy-simulation"
version = "0.1.0"
edition = "2021"
description = "Dark Forest game simulator — Rust port of the Python game_sim"

[dependencies]
rand = "0.8"
hex = "0.4"
rayon = "1.5"
memmap2 = "0.9"
wgpu = { version = "22.0", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
